--- a/src/screens/chat/mobile/bl-chat-mobile.scss
+++ b/src/screens/chat/mobile/bl-chat-mobile.scss
@@ -24,6 +24,7 @@
     border: 1px solid black;
     border-radius: 100px;
     background-color: white;
+    margin-bottom: 5px;
 
     display: flex;
 
