--- a/src/app.scss
+++ b/src/app.scss
@@ -4,10 +4,7 @@ body {
 }
 
 #app-root {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  height: 100%;
+  position: fixed;
 }
