--- a/src/screens/chat/mobile/bl-chat-mobile.scss
+++ b/src/screens/chat/mobile/bl-chat-mobile.scss
@@ -72,9 +72,19 @@
   width: 100%;
   height: 100%;
   background-color: $color-main-accent;
+  position: fixed;
+  transition: all 0.4s ease-in-out;
 
   display: flex;
   flex-direction: column;
+
+  &.open {
+    transform: translate(0, 0);
+  }
+
+  &.closed {
+    transform: translate(1000px, 0);
+  }
 
   .top-bar {
     flex: 0 0 auto;
