--- a/src/components/home/settings-dialog.scss
+++ b/src/components/home/settings-dialog.scss
@@ -1,7 +1,7 @@
 .settings-dialog {
   position: absolute;
-  width: 400px;
-  height: 400px;
+  width: 500px;
+  height: 500px;
   margin-top: 600px;
   border: 1px solid black;
   transition: transform 0.3s linear;
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  justify-content: space-evenly;
+  //justify-content: space-evenly;
   align-items: center;
 
   &.open {
@@ -18,5 +18,19 @@
 
   &.closed {
     transform: translateY(-1000px);
+  }
+
+  .icon-picker {
+    width: 90%;
+    height: 180px;
+    border: 1px solid black;
+    box-sizing: border-box;
+    padding-top: 5px;
+    padding-left: 5px;
+    overflow-y: auto;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
