--- a/src/components/home/settings-dialog.scss
+++ b/src/components/home/settings-dialog.scss
@@ -1,7 +1,7 @@
 .settings-dialog {
   position: absolute;
   width: 500px;
-  height: 500px;
+  height: 530px;
   margin-top: 600px;
   border: 1px solid black;
   transition: transform 0.3s linear;
@@ -9,7 +9,6 @@
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  //justify-content: space-evenly;
   align-items: center;
 
   &.open {
@@ -20,63 +19,112 @@
     transform: translateY(-1000px);
   }
 
-  .icon-picker {
-    width: 90%;
-    height: 180px;
-    border: 1px solid black;
-    box-sizing: border-box;
-    padding-top: 5px;
-    padding-left: 5px;
-    overflow-y: auto;
-
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  .title {
+    font-size: 2rem;
   }
 
-  .switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
+  .setting {
+    margin-top: 30px;
+  }
+
+  .name-input {
+    display: flex;
 
     input {
-      opacity: 0;
-      width: 0;
-      height: 0;
+      margin-left: 5px;
+      width: 200px;
+      text-align: center;
+    }
+  }
 
-      &:checked {
-        + .slider {
-          background-color: #2196f3;
-          &::before {
-            transform: translateX(26px);
+  .icon-picker {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .current-icon {
+      width: 100px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .icons-select {
+      margin-top: 10px;
+      width: 90%;
+      height: 180px;
+      box-sizing: border-box;
+      padding-top: 5px;
+      padding-left: 5px;
+      overflow-y: auto;
+
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  .theme-toggle {
+    margin-top: 50px;
+    width: 150px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+    .switch {
+      position: relative;
+      display: inline-block;
+      width: 60px;
+      height: 34px;
+
+      input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+
+        &:checked {
+          + .slider {
+            background-color: #2196f3;
+            &::before {
+              transform: translateX(26px);
+            }
           }
         }
       }
-    }
 
-    .slider {
-      position: absolute;
-      cursor: pointer;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: #ccc;
-      transition: 0.4s;
-      border-radius: 34px;
-
-      &::before {
+      .slider {
         position: absolute;
-        content: '';
-        width: 26px;
-        height: 26px;
-        left: 4px;
-        bottom: 4px;
-        background-color: white;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
         transition: 0.4s;
-        border-radius: 50%;
+        border-radius: 34px;
+
+        &::before {
+          position: absolute;
+          content: '';
+          width: 26px;
+          height: 26px;
+          left: 4px;
+          bottom: 4px;
+          background-color: white;
+          transition: 0.4s;
+          border-radius: 50%;
+        }
       }
     }
+  }
+
+  .save-button {
+    width: 80px;
+    height: 30px;
+    margin-top: 40px;
+    border-radius: 5px;
   }
 }
