--- a/src/components/home/settings-dialog.scss
+++ b/src/components/home/settings-dialog.scss
@@ -1,9 +1,11 @@
 .settings-dialog {
+  z-index: 10;
   position: absolute;
   width: 500px;
   height: 530px;
   margin-top: 600px;
   border: 1px solid black;
+  background-color: white;
   transition: transform 0.3s linear;
 
   display: flex;
