--- a/src/components/common/buttons/button.scss
+++ b/src/components/common/buttons/button.scss
@@ -1,2 +1,11 @@
 .button {
+  user-select: none;
+  cursor: pointer;
+  border-radius: 10px;
+  box-sizing: border-box;
+  background-color: blueviolet;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
