--- a/src/components/home/home-screen.scss
+++ b/src/components/home/home-screen.scss
@@ -1,7 +1,6 @@
 .home-screen {
   width: 100%;
   height: 100%;
-  position: relative;
 
   display: flex;
   flex-direction: column;
@@ -10,18 +9,25 @@
 
   .logo {
     font-size: 5rem;
-    margin-top: 20%;
   }
 
   .name {
+    margin-top: 50px;
     font-size: 1.8rem;
     display: flex;
     align-items: center;
   }
 
   .settings {
+    margin-top: 50px;
     font-size: 1.2rem;
     text-decoration: underline;
     cursor: pointer;
+  }
+
+  .start-button {
+    margin-top: 50px;
+    width: 160px;
+    height: 40px;
   }
 }
