--- a/src/components/common/buttons/button.scss
+++ b/src/components/common/buttons/button.scss
@@ -1,11 +1,20 @@
+@import '../blether-variables.scss';
+
 .button {
   user-select: none;
   cursor: pointer;
   border-radius: 10px;
   box-sizing: border-box;
-  background-color: blueviolet;
+
+  background-color: $lightButtonBgColor;
+  color: $lightButtonTextColor;
+  font-family: $regularTextFont;
 
   display: flex;
   align-items: center;
   justify-content: center;
+
+  &:hover {
+    // set bg colour
+  }
 }
