--- a/src/components/home/settings-dialog.scss
+++ b/src/components/home/settings-dialog.scss
@@ -7,7 +7,7 @@
   height: 530px;
   border-radius: 30px;
   background-color: $lightAltBackground;
-  color: $lightAltTextColor;
+  color: $lightMainTextColor;
   font-family: $regularTextFont;
 
   transition: transform 0.5s;
