--- a/src/components/common/blether-variables.scss
+++ b/src/components/common/blether-variables.scss
@@ -8,15 +8,15 @@ $animInCurve: cubic-bezier(0.175, 0.885, 0.32, 1.05);
 $animOutCurve: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
 // Light theme
-$lightMainBackground: #ebebeb;
+$lightMainBackground: #dee4e7;
 $lightMainTextColor: #1f1f1f;
 
 $lightAltBackground: #fff;
 $lightAltTextColor: black;
 
-$lightButtonBgColor: rgb(137, 42, 226);
+$lightButtonBgColor: #59488b;
 $lightButtonTextColor: white;
 
 // Dark theme
-$darkMainBackground: #59488b;
+$darkMainBackground: #37474f; // #59488b;
 $darkMainTextColor: #fff;
