--- a/src/components/home/settings-dialog.scss
+++ b/src/components/home/settings-dialog.scss
@@ -1,5 +1,27 @@
 @import '../common/blether-variables.scss';
 
+.dialog-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+
+  transition: opacity 0.5s linear;
+
+  &.open {
+    opacity: 0.5;
+  }
+
+  &.closing {
+    opacity: 0;
+  }
+
+  &.closed {
+    opacity: 0;
+    z-index: -10;
+  }
+}
+
 .settings-dialog {
   z-index: 10;
   position: absolute;
@@ -22,13 +44,10 @@
     transition-timing-function: $animInCurve;
   }
 
-  &.closed {
+  &.closed,
+  &.closing {
     transform: translateY(-1000px);
     transition-timing-function: $animOutCurve;
-  }
-
-  .title {
-    font-size: 2rem;
   }
 
   .setting {
