--- a/src/components/home/settings-dialog.scss
+++ b/src/components/home/settings-dialog.scss
@@ -28,8 +28,8 @@
   width: 500px;
   height: 530px;
   border-radius: 30px;
-  background-color: $lightAltBackground;
-  color: $lightMainTextColor;
+  background-color: white;
+  color: black;
   font-family: $regularTextFont;
 
   transition: transform 0.5s;
