--- a/src/components/common/blether-variables.scss
+++ b/src/components/common/blether-variables.scss
@@ -10,7 +10,7 @@ $animOutCurve: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 // Buttons
 $buttonBgColor: #59488b;
 $buttonBgHover: #7d6bb3;
-$buttonBgDim: #322a50;
+$buttonBgDim: #b7b3c4;
 $buttonTextColor: white;
 $buttonTextDim: #dee4e7;
 
