--- a/src/components/home/settings-dialog.scss
+++ b/src/components/home/settings-dialog.scss
@@ -97,6 +97,16 @@
       flex-wrap: wrap;
       justify-content: center;
       align-items: center;
+
+      &::-webkit-scrollbar {
+        width: 10px;
+        background-color: white;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background: rgb(165, 165, 165);
+        border-radius: 10px;
+      }
     }
   }
 
