sidebar content and anims

--- a/src/components/common/blether-variables.scss
+++ b/src/components/common/blether-variables.scss
@@ -31,5 +31,6 @@ $darkMainTextColor: #fff;
   &.dark {
     background-color: $darkMainBackground;
     color: $darkMainTextColor;
+    border-color: $darkMainTextColor;
   }
 }
