--- a/src/components/chat/sidebar.scss
+++ b/src/components/chat/sidebar.scss
@@ -13,7 +13,7 @@
   align-items: center;
 
   &.open {
-    width: 250px;
+    width: $sidebarOpenWidth;
 
     .button {
       width: 120px;
@@ -22,7 +22,7 @@
   }
 
   &.closed {
-    width: 60px;
+    width: $sidebarClosedWidth;
 
     .button {
       width: 40px;
