--- a/src/components/common/blether-variables.scss
+++ b/src/components/common/blether-variables.scss
@@ -7,6 +7,10 @@ $titleTextFont: 'Comfortaa', cursive;
 $animInCurve: cubic-bezier(0.175, 0.885, 0.32, 1.05);
 $animOutCurve: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
+// Chat window
+$sidebarOpenWidth: 250px;
+$sidebarClosedWidth: 60px;
+
 // Buttons
 $buttonBgColor: #59488b;
 $buttonBgHover: #7d6bb3;
