rich text editor setup

--- a/src/components/chat/message-area.scss
+++ b/src/components/chat/message-area.scss
@@ -4,4 +4,8 @@
 
   box-sizing: border-box;
   border-bottom: 1px solid black;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
