--- a/src/components/chat/message-input.scss
+++ b/src/components/chat/message-input.scss
@@ -1,5 +1,33 @@
 .message-input {
   flex: 0 0;
   width: 100%;
-  height: 300px;
+  height: 200px;
+}
+
+.editor-wrapper {
+  height: 100px;
+
+  .toolbar {
+    height: 40px;
+    padding: 0;
+    margin: 0;
+    border: none;
+  }
+
+  .editor {
+    height: calc(100% - 40px);
+    overflow-y: auto;
+    box-sizing: border-box;
+    padding-bottom: 10px;
+  }
+
+  .rdw-emoji-modal {
+    top: auto;
+    left: 40px;
+    bottom: 3px;
+  }
+}
+
+.public-DraftStyleDefault-block {
+  margin: 0.5em;
 }
