--- a/src/components/chat/message-input.scss
+++ b/src/components/chat/message-input.scss
@@ -1,3 +1,5 @@
+@import '../common/blether-variables.scss';
+
 .message-input {
   flex: 0 0;
   width: 100%;
@@ -15,10 +17,11 @@
   }
 
   .editor {
-    height: calc(100% - 40px);
+    height: calc(100% - 45px);
     overflow-y: auto;
     box-sizing: border-box;
     padding-bottom: 10px;
+    font-family: $regularTextFont;
   }
 
   .rdw-emoji-modal {
@@ -29,5 +32,6 @@
 }
 
 .public-DraftStyleDefault-block {
-  margin: 0.5em;
+  margin: 0;
+  margin-left: 5px;
 }
