--- a/src/components/chat/message-area.scss
+++ b/src/components/chat/message-area.scss
@@ -2,10 +2,6 @@
   flex: 1 1;
   width: 100%;
 
-  box-sizing: border-box;
-  border-bottom: 1px solid black;
-
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
 }
