--- a/src/components/chat/message.scss
+++ b/src/components/chat/message.scss
@@ -1,2 +1,16 @@
 .message {
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+
+  .top-row {
+    width: 100%;
+
+    display: flex;
+  }
+
+  .bot-row {
+    width: 100%;
+  }
 }
