more message styling

--- a/src/components/chat/message-panel.scss
+++ b/src/components/chat/message-panel.scss
@@ -4,6 +4,7 @@
   flex: 1 1;
   width: calc(100% - $sidebarClosedWidth);
   height: 100%;
+  overflow: hidden;
 
   display: flex;
   flex-direction: column;
