--- a/src/components/chat/message-area.scss
+++ b/src/components/chat/message-area.scss
@@ -1,6 +1,7 @@
 .message-area {
-  flex: 1 1;
+  flex: 1 1 100%;
   width: 100%;
+  overflow-y: auto;
 
   display: flex;
   flex-direction: column;
