--- a/src/components/chat/message.scss
+++ b/src/components/chat/message.scss
@@ -1,5 +1,10 @@
+@import '../common/blether-variables.scss';
+
 .message {
   width: 100%;
+  font-family: $regularTextFont;
+  box-sizing: border-box;
+  padding: 5px;
 
   display: flex;
   flex-direction: column;
@@ -8,6 +13,16 @@
     width: 100%;
 
     display: flex;
+    align-items: center;
+
+    .icon {
+      width: 35px;
+      height: 35px;
+    }
+
+    .name {
+      margin-right: 20px;
+    }
   }
 
   .bot-row {
