styling input more

--- a/src/components/chat/message.scss
+++ b/src/components/chat/message.scss
@@ -8,8 +8,14 @@
 
   display: flex;
 
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+
   .left-col {
-    flex: 0 0 50px;
+    flex: 0 0 60px;
+    display: flex;
+    justify-content: center;
 
     .icon {
       width: 40px;
@@ -21,7 +27,7 @@
   .right-col {
     flex: 1 1 100%;
     box-sizing: border-box;
-    padding-left: 10px;
+    padding-left: 5px;
     display: flex;
     flex-direction: column;
 
