--- a/src/components/chat/message-input.scss
+++ b/src/components/chat/message-input.scss
@@ -1,29 +1,43 @@
 @import '../common/blether-variables.scss';
 
+$inputBordeRadius: 5px;
+$toolbarHeight: 33px;
+
 .message-input {
   flex: 0 0;
   width: 100%;
   height: 200px;
 
-  border-top: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.editor-container {
+  width: 95%;
 }
 
 .editor-wrapper {
   height: 100px;
+  box-sizing: border-box;
 
   .toolbar {
-    height: 40px;
+    height: $toolbarHeight;
     padding: 0;
     margin: 0;
     border: none;
+    box-sizing: border-box;
+    padding-left: 10px;
+    border-radius: $inputBordeRadius $inputBordeRadius 0px 0px;
   }
 
   .editor {
-    height: calc(100% - 45px);
+    height: calc(100% - 33px);
     overflow-y: auto;
     box-sizing: border-box;
-    padding-bottom: 10px;
+    padding: 10px;
     font-family: $regularTextFont;
+    border-radius: 0px 0px $inputBordeRadius $inputBordeRadius;
   }
 
   .rdw-emoji-modal {
