--- a/src/components/chat/message-input.scss
+++ b/src/components/chat/message-input.scss
@@ -1,12 +1,11 @@
 @import '../common/blether-variables.scss';
 
 $inputBordeRadius: 5px;
-$toolbarHeight: 33px;
+$toolbarHeight: 30px;
 
 .message-input {
-  flex: 0 0;
+  flex: 0 0 135px;
   width: 100%;
-  height: 200px;
 
   display: flex;
   justify-content: center;
@@ -32,7 +31,7 @@ $toolbarHeight: 33px;
   }
 
   .editor {
-    height: calc(100% - 33px);
+    height: calc(100% - 30px);
     overflow-y: auto;
     box-sizing: border-box;
     padding: 10px;
