--- a/src/components/chat/sidebar.scss
+++ b/src/components/chat/sidebar.scss
@@ -45,10 +45,7 @@
   .mid-section {
     flex: 1 1 100%;
     width: 100%;
-
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
+    overflow-y: auto;
 
     .participant {
       font-family: $regularTextFont;
