--- a/src/components/chat/sidebar.scss
+++ b/src/components/chat/sidebar.scss
@@ -46,6 +46,7 @@
     flex: 1 1 100%;
     width: 100%;
     overflow-y: auto;
+    position: relative;
 
     .participant {
       font-family: $regularTextFont;
