--- a/src/components/common/blether-variables.scss
+++ b/src/components/common/blether-variables.scss
@@ -9,6 +9,7 @@ $animOutCurve: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 // Chat window
 $sidebarOpenWidth: 250px;
 $sidebarClosedWidth: 68px;
+$borderRadius: 5px;
 
 // Buttons
 $buttonBgColor: #59488b;
